<resources>
    <string name="app_name">Pokemon Finder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="pikachu">Pikachu</string>
    <string name="finder">Finder</string>
    <string name="pokemon">Pokemon</string>
    <string name="first_we_need_to_know_your_name">First we need to know your name…</string>
    <string name="lets_meet_each_other_first">Let\'s meet each other first?</string>
    <string name="next">Next</string>
    <string name="hello_trainer">Hello, trainer %1$s!</string>
    <string name="now_tell_us_which_is_your_favorite_pokemon_type">…now tell us which is your favorite Pokémon type:</string>
    <string name="pokemon_type">Pokemon Type</string>
    <string name="name">Name</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="updating_database">Updating database…</string>
    <string name="please_enter_yout_name">Please, enter your name!</string>
</resources>