<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="10"
        tools:listitem="@layout/view_pokemon_types"
        tools:orientation="horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/pokemon"
        app:layout_constraintBottom_toBottomOf="@id/btn_sort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_sort" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@id/btn_sort"
        app:layout_constraintEnd_toStartOf="@id/btn_sort"
        app:layout_constraintTop_toTopOf="@id/btn_sort" />

    <ImageView
        android:id="@+id/btn_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/sort"
        android:focusable="true"
        android:padding="16dp"
        android:src="@drawable/ic_baseline_arrow_downward_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_types"
        tools:src="@drawable/ic_baseline_arrow_downward_24" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_light"
        app:layout_constraintTop_toBottomOf="@id/btn_sort" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pokemons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:itemCount="10"
        tools:listitem="@layout/view_pokemon_names"
        tools:orientation="horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>